--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1" type="text/css" media="print"/>
+<script type="text/javascript" src="card.js"></script>
 </head>
 
 <body>
