--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1" type="text/css" media="print"/>
-<script type="text/javascript" src="card.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1" type="text/css" media="print"/>
+	<script type="text/javascript" src="card.js"></script>
+	<link rel="stylesheet" type="text/css" href="card.css" />	
 </head>
 
 <body>
