--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 
 <head>
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1" type="text/css" media="print"/>
 	<script type="text/javascript" src="card.js"></script>
-	<link rel="stylesheet" type="text/css" href="card.css" />	
+	<link rel="stylesheet" type="text/css" href="card.css" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bwip-js/3.0.4/bwip-js-min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jsbarcode/3.11.5/JsBarcode.all.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js"></script>
+	
 </head>
 
 <body>
