--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <span id="name">JOHN SMITH</span>
   </div>
   <div>
-    <span id="clubid">C12345</span>
+    <span id="clubid">Club ID# C12345</span>
   </div>
   <div>
-    <span id="issueDate">Issue Date</span>
+    <span id="issueDate">Issue Date: 10/22/2021</span>
   </div>
     <div>
     <span id='barcode-value'>
