--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 		<button class="crmBtn" id="popup" onclick="div_show()" type="submit">
 			Customer Info
 		</button>
+		<button class="crmBtn" id="open_camera" onclick="openCamera()" type="submit">
+			Open Camera
+		</button>
   </div>
  </div>
 </body> 
