--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <span id="issueDate">Issue Date: 10/22/2021</span>
   </div>
     <div>
-    <span id='barcode-value'>
-			<img id="barcode"/>
-		</span>
+    <span id='barcode-span'>
+		<svg id="barcode"></svg>
+	</span>
   </div>
 </div>
 	
