--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 </head>
 
 <body>
+
 <div id="customerdtl-crm-print-club" class="crm-container">
 	<div id="print-div">
 		<div class="float-child"> 
 				<span id="logo">
-      	<img src="https://drive.google.com/thumbnail?id=1fdPWPHYvvEjfShzdCclH6NbtqpWUg9P7">
+      	<img id="shoot-straight" src="https://drive.google.com/thumbnail?id=1fdPWPHYvvEjfShzdCclH6NbtqpWUg9P7">
   		</span>
 	  <div class="float-child">	 
 			<span id="photo">
@@ -70,6 +71,8 @@
 		</button>
   </div>
  </div>
+
+
 <script type="text/javascript" src="card.js"></script>
 </body> 
 
