--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	
 </head>
 
-<body>
 
 <div id="customerdtl-crm-print-club" class="crm-container">
 	<div id="print-div">
@@ -23,6 +22,7 @@
   		</span>
 	  <div class="float-child">	 
 			<span id="photo">
+				<img id="shoot-straight" src="https://drive.google.com/thumbnail?id=1fdPWPHYvvEjfShzdCclH6NbtqpWUg9P7">
 			</span>
 	  </div>	
 	</div>
@@ -30,7 +30,7 @@
     <span id="name">JOHN SMITH</span>
   </div>
   <div>
-    <span id="clubid">Club ID# C12345</span>
+    <span id="clubid">Member ID #C12345</span>
   </div>
   <div>
     <span id="issueDate">Issue Date: 10/22/2021</span>
@@ -71,6 +71,8 @@
 		</button>
   </div>
  </div>
+
+
 
 
 <script type="text/javascript" src="card.js"></script>
