Updated family membership functionality

--- a/family.html
+++ b/family.html
@@ -16,43 +16,44 @@
 <div id="family-div">
     <div id="print-div">
         <div class="float-child">
-      	    <img id="shoot-straight" src="https://drive.google.com/thumbnail?id=1fdPWPHYvvEjfShzdCclH6NbtqpWUg9P7">
+      	    <img id="shoot-straight" src="logo.png">
             </span>
         </div>
         <div id="fam-head">
-            <span id="name"><h3>FAMILY MEMBERSHIP</h3></span>
+            <span id="name"><h2>FAMILY MEMBERSHIP</h2></span>
             <span id="clubid"><h4>CLUB ID #C12345</h4></span>
+            <span id="issueDate"><h4>ISSUE DATE: 10/29/2021</h4></span>
             <hr>
         </div>
 
         <div>
-            <span class="member">Primary Member:</span>
-            <span id="member1">JOHN SMITH</span>
+            <span class="member"></span>
+            <span id="member1">MEMBER: JOHN SMITH</span>
         </div>
 
         <div>
-            <span class="member">Secondary Member:</span>
-            <span id="member2">JANE DOE</span>
+            <span class="member"></span>
+            <span id="member2">MEMBER: JANE DOE</span>
         </div>
 
         <div>
-            <span class="member">Child:</span>
-            <span id="member3">JOHN SMITH</span>
+            <span class="member"></span>
+            <span id="member3">CHILD: LIAM SMITH</span>
         </div>
 
         <div>
-            <span class="member">Child:</span>
-            <span id="member4">JOHN SMITH</span>
+            <span class="member"></span>
+            <span id="member4">CHILD: NOAH SMITH</span>
         </div>
 
         <div>
-            <span class="member">Child:</span>
-            <span id="member5">JOHN SMITH</span>
+            <span class="member"></span>
+            <span id="member5">CHILD: OLIVER SMITH</span>
         </div>
 
         <div>
-            <span class="member">Child:</span>
-            <span id="member6">JOHN SMITH</span>
+            <span class="member"></span>
+            <span id="member6">CHILD: ELIJAH SMITH</span>
         </div>
 
         <div id="barcode-div">
