--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="print-div">
 		<div class="float-child"> 
 				<span id="logo">
-      	<img id="shoot-straight" src="https://drive.google.com/thumbnail?id=1fdPWPHYvvEjfShzdCclH6NbtqpWUg9P7">
+      	<img id="shoot-straight" src="logo.png">
   		</span>
 	  <div class="float-child">	 
 			<span id="photo">
@@ -75,7 +75,7 @@
 <div id="template-div">
 	<div id="temp-header"><h2>Family Membership</h2></div>
 	<hr>
-	<a href="family.html">
+	<a href="family.html" target="_blank">
 		<button class="crmBtn" id="template" onclick="changeTemplate()" type="submit">
 			Generate Family Membership Card
 		</button>
