local storage update

--- a/family.html
+++ b/family.html
@@ -21,7 +21,7 @@
         </div>
         <div id="fam-head">
             <span id="name"><h2>FAMILY MEMBERSHIP</h2></span>
-            <span id="clubid"><h4>CLUB ID #C12345</h4></span>
+            <span id="clubid"><h4>MEMBER ID #C12345</h4></span>
             <span id="issueDate"><h4>ISSUE DATE: 10/29/2021</h4></span>
             <hr>
         </div>
@@ -71,8 +71,8 @@
             <h2>Family Membership Info</h2>
             <hr>
 
-            <input id="memberId" name="text"  placeholder="Club ID# (e.g. C12345)" type="text">
-            <input id="issue" name="text" type="text"  placeholder="Issue Date MM/DD/YYYY"></input>
+            <!--<input id="memberId" name="text"  placeholder="Club ID# (e.g. C12345)" type="text">-->
+            <!--<input id="issue" name="text" type="text"  placeholder="Issue Date MM/DD/YYYY"></input>-->
 
             <input id="formname1" name="name"  placeholder="Primary Name" type="text">
             <input id="formname2" name="name"  placeholder="Secondary Name" type="text">
