customer name local storage

--- a/family.html
+++ b/family.html
@@ -8,8 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bwip-js/3.0.4/bwip-js-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsbarcode/3.11.5/JsBarcode.all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js"></script>
-
-    <title>Title</title>
+    <link rel="shortcut icon" href="logo.png">
+    <title>Family Membership</title>
 </head>
 <body>
 
@@ -33,7 +33,7 @@
 
         <div>
             <span class="member"></span>
-            <span id="member2">MEMBER: JANE DOE</span>
+            <span id="member2">SPOUSE: JANE SMITH</span>
         </div>
 
         <div>
@@ -74,8 +74,8 @@
             <!--<input id="memberId" name="text"  placeholder="Club ID# (e.g. C12345)" type="text">-->
             <!--<input id="issue" name="text" type="text"  placeholder="Issue Date MM/DD/YYYY"></input>-->
 
-            <input id="formname1" name="name"  placeholder="Primary Name" type="text">
-            <input id="formname2" name="name"  placeholder="Secondary Name" type="text">
+            <!--<input id="formname1" name="name"  placeholder="Primary Name" type="text">-->
+            <input id="formname2" name="name"  placeholder="Spouse Name" type="text">
             <input id="formname3" name="name"  placeholder="Child Name" type="text">
             <input id="formname4" name="name"  placeholder="Child Name" type="text">
             <input id="formname5" name="name"  placeholder="Child Name" type="text">
