--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bwip-js/3.0.4/bwip-js-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jsbarcode/3.11.5/JsBarcode.all.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js"></script>
-	
-	
+	<link rel="shortcut icon" href="logo.png">
+	<title>Membership Card</title>
 </head>
 
 
