gold buttons index & family

--- a/family.html
+++ b/family.html
@@ -81,7 +81,7 @@
             <input id="formname5" name="name"  placeholder="Child Name" type="text">
             <input id="formname6" name="name"  placeholder="Child Name" type="text">
 
-            <button class="crmBtn" onclick="fillOutCard()" type="submit" id="submit">Send</button>
+            <button id="submitBtn" class="crmBtn" onclick="fillOutCard()" type="submit" id="submit">Send</button>
         </div>
     </div>
     <!-- Popup Div Ends Here -->
