--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	
 	<meta name="viewport" content="width=device-width, initial-scale=1" type="text/css" media="print"/>
 	<link href="main.css" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -13,7 +11,7 @@
 	<title>Membership Card</title>
 </head>
 
-
+<body>
 <div id="customerdtl-crm-print-club" class="crm-container">
 	<div id="print-div">
 		<div class="float-child"> 
